# otus-cpp-basic-example

./: CMakeLists.txt  Forward_container.cpp  Linked_list.cpp  README.md  count_k_words.cpp  guess_the_number.cpp  hello_world.cpp  main.cpp  move_me_out.cpp  move_me_out.h  statistics.cpp  top_10_words.cpp
03_homework/: CMakeLists.txt  guess_the_number.cpp
03_homework/high_score_lib/: CMakeLists.txt  scores_table.cpp  scores_table.h
03_homework/random_lib/: CMakeLists.txt
dynamic_lib/: CMakeLists.txt  random_number.cpp  random_number.h
include/: number.hpp
src/: Linked_list.h  Vector.h
test/: test_Linked_list.cpp  test_std_vector.cpp
